All_Component_DX/force-app/main/default/objects/SM_SNS_Detail__c/fields/SM_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SM_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates whether the ARN end point is active or inactive on AWS Server.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>