All_Component_DX/force-app/main/default/objects/SM_SNS_Detail__c/fields/SM_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Status__c</fullName>
    <description>This indicates the SNS status for the Pulse application when a user logs-in or logs-out.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>UnRegistered</fullName>
            </value>
            <value>
                <fullName>UnInstalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>