All_Component_DX/force-app/main/default/objects/SM_SNS_Detail__c/fields/SM_TargetARN__c.field-meta.xml
<CustomField>
    <fullName>SM_TargetARN__c</fullName>
    <description>This stores the AWS SNS end point.</description>
    <label>TargetARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>